[ci] Add ccl to the test cycle

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
     name: ${{ matrix.lisp }} on ${{ matrix.os }}
     strategy:
       matrix:
-        lisp: [sbcl-bin]
+        lisp: [sbcl-bin, ccl]
         os: [ ubuntu-latest, macos-latest ]
 
     runs-on: ${{ matrix.os }}
