--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,9 +9,11 @@ jobs:
     name: ${{ matrix.lisp }} on ${{ matrix.os }}
     strategy:
       matrix:
-        lisp: [sbcl-bin, ccl]
+        lisp: [sbcl-bin, ccl-bin/1.12.1, clasp-bin/2022-01-28, ecl/21.2.1, abcl-bin/1.9.2]
         os: [ ubuntu-latest, macos-latest ]
-
+        exclude:
+          - os: macos-latest
+            lisp: clasp-bin/2022-01-28
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
